# fasthx

./: pyproject.toml
examples/jinja-rendering/: jinja_app.py
examples/jinja-rendering/templates/: cities.html  dropdown.html  index.html  user-list.html
